--- a/src/patternfly/components/Spinner/spinner.hbs
+++ b/src/patternfly/components/Spinner/spinner.hbs
@@ -1,4 +1,4 @@
-<svg class="pf-c-spinner{{#if spinner--modifier}} {{spinner--modifier}}{{/if}}"
+<svg class="{{pfv}}spinner{{#if spinner--modifier}} {{spinner--modifier}}{{/if}}"
   role="progressbar"
   viewBox="0 0 100 100"
   {{#if spinner--aria-labelledby}}
@@ -13,5 +13,5 @@
   {{#if spinner--attribute}}
     {{{spinner--attribute}}}
   {{/if}}>
-  <circle class="pf-c-spinner__path" cx="50" cy="50" r="45" fill="none"></circle>
+  <circle class="{{pfv}}spinner__path" cx="50" cy="50" r="45" fill="none"></circle>
 </svg>
