--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -255,7 +255,7 @@
       margin-bottom: var(--#{$table}--m-compact__action--responsive--MarginTop);
     }
 
-    .#{$button} {
+    .#{$table}__toggle .#{$button} {
       margin-bottom: var(--#{$table}--m-compact__toggle--c-button--responsive--MarginBottom);
     }
   }
