--- a/src/patternfly/components/ToggleGroup/themes/dark/toggle-group.scss
+++ b/src/patternfly/components/ToggleGroup/themes/dark/toggle-group.scss
@@ -1,11 +1,11 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
 @mixin pf-v5-theme-dark-toggle-group() {
-  .#{toolbar-group} {
-    --#{toolbar-group}__button--hover--BackgroundColor: var(--#{$pf-global}--palette--black-700);
-    --#{toolbar-group}__button--focus--BackgroundColor: var(--#{$pf-global}--palette--black-700);
-    --#{toolbar-group}__button--disabled--BackgroundColor: var(--#{$pf-global}--palette--black-600);
-    --#{toolbar-group}__button--disabled--Color: var(--#{$pf-global}--palette--black-100);
-    --#{toolbar-group}__button--m-selected--BackgroundColor: var(--#{$pf-global}--primary-color--300);
+  .#{$toggle-group} {
+    --#{$toggle-group}__button--hover--BackgroundColor: var(--#{$pf-global}--palette--black-700);
+    --#{$toggle-group}__button--focus--BackgroundColor: var(--#{$pf-global}--palette--black-700);
+    --#{$toggle-group}__button--disabled--BackgroundColor: var(--#{$pf-global}--palette--black-600);
+    --#{$toggle-group}__button--disabled--Color: var(--#{$pf-global}--palette--black-100);
+    --#{$toggle-group}__button--m-selected--BackgroundColor: var(--#{$pf-global}--primary-color--300);
   }
 }
