feat(version): updated icons

--- a/src/patternfly/base/_chart-globals.scss
+++ b/src/patternfly/base/_chart-globals.scss
@@ -1,5 +1,8 @@
 @import "../sass-utilities/colors";
 @import "../sass-utilities/scss-variables";
+// stylelint-disable scss/dollar-variable-pattern
+$chart: #{$pf-prefix} + 'c-chart';
+// stylelint-enable
 
 // Chart colors
 
