--- a/src/patternfly/themes/dark/_patternfly-charts-theme-dark.scss
+++ b/src/patternfly/themes/dark/_patternfly-charts-theme-dark.scss
@@ -2,7 +2,7 @@
 
 @mixin pf-v5-charts-theme-dark($pf-v5-charts-theme-dark-class: "") {
   // stylelint-disable
-  .#{$pf-prefix}chart {
+  .#{$chart} {
     svg g[clip-path] {
       mix-blend-mode: normal;
     }
@@ -10,89 +10,89 @@
 
   @at-root :root#{&} {
     // colors
-    --#{$pf-prefix}chart-color-blue-100: #{$pf-v5-chart-color-blue-100};
-    --#{$pf-prefix}chart-color-blue-200: #{$pf-v5-chart-color-blue-200};
-    --#{$pf-prefix}chart-color-blue-300: #{$pf-v5-chart-color-blue-300};
-    --#{$pf-prefix}chart-color-blue-400: #{$pf-v5-chart-color-blue-400};
-    --#{$pf-prefix}chart-color-blue-500: #{$pf-v5-chart-color-blue-500};
-    --#{$pf-prefix}chart-color-green-100: #{$pf-v5-chart-color-green-100};
-    --#{$pf-prefix}chart-color-green-200: #{$pf-v5-chart-color-green-200};
-    --#{$pf-prefix}chart-color-green-300: #{$pf-v5-chart-color-green-300};
-    --#{$pf-prefix}chart-color-green-400: #{$pf-v5-chart-color-green-400};
-    --#{$pf-prefix}chart-color-green-500: #{$pf-v5-chart-color-green-500};
-    --#{$pf-prefix}chart-color-cyan-100: #{$pf-v5-chart-color-cyan-100};
-    --#{$pf-prefix}chart-color-cyan-200: #{$pf-v5-chart-color-cyan-200};
-    --#{$pf-prefix}chart-color-cyan-300: #{$pf-v5-chart-color-cyan-300};
-    --#{$pf-prefix}chart-color-cyan-400: #{$pf-v5-chart-color-cyan-400};
-    --#{$pf-prefix}chart-color-cyan-500: #{$pf-v5-chart-color-cyan-500};
-    --#{$pf-prefix}chart-color-purple-100: #{$pf-v5-chart-color-purple-100};
-    --#{$pf-prefix}chart-color-purple-200: #{$pf-v5-chart-color-purple-200};
-    --#{$pf-prefix}chart-color-purple-300: #{$pf-v5-chart-color-purple-300};
-    --#{$pf-prefix}chart-color-purple-400: #{$pf-v5-chart-color-purple-400};
-    --#{$pf-prefix}chart-color-purple-500: #{$pf-v5-chart-color-purple-500};
-    --#{$pf-prefix}chart-color-red-100: #{$pf-v5-chart-color-red-100};
-    --#{$pf-prefix}chart-color-red-200: #{$pf-v5-chart-color-red-200};
-    --#{$pf-prefix}chart-color-red-300: #{$pf-v5-chart-color-red-300};
-    --#{$pf-prefix}chart-color-red-400: #{$pf-v5-chart-color-red-400};
-    --#{$pf-prefix}chart-color-red-500: #{$pf-v5-chart-color-red-500};
+    --#{$chart}-color-blue-100: #{$pf-v5-chart-color-blue-100};
+    --#{$chart}-color-blue-200: #{$pf-v5-chart-color-blue-200};
+    --#{$chart}-color-blue-300: #{$pf-v5-chart-color-blue-300};
+    --#{$chart}-color-blue-400: #{$pf-v5-chart-color-blue-400};
+    --#{$chart}-color-blue-500: #{$pf-v5-chart-color-blue-500};
+    --#{$chart}-color-green-100: #{$pf-v5-chart-color-green-100};
+    --#{$chart}-color-green-200: #{$pf-v5-chart-color-green-200};
+    --#{$chart}-color-green-300: #{$pf-v5-chart-color-green-300};
+    --#{$chart}-color-green-400: #{$pf-v5-chart-color-green-400};
+    --#{$chart}-color-green-500: #{$pf-v5-chart-color-green-500};
+    --#{$chart}-color-cyan-100: #{$pf-v5-chart-color-cyan-100};
+    --#{$chart}-color-cyan-200: #{$pf-v5-chart-color-cyan-200};
+    --#{$chart}-color-cyan-300: #{$pf-v5-chart-color-cyan-300};
+    --#{$chart}-color-cyan-400: #{$pf-v5-chart-color-cyan-400};
+    --#{$chart}-color-cyan-500: #{$pf-v5-chart-color-cyan-500};
+    --#{$chart}-color-purple-100: #{$pf-v5-chart-color-purple-100};
+    --#{$chart}-color-purple-200: #{$pf-v5-chart-color-purple-200};
+    --#{$chart}-color-purple-300: #{$pf-v5-chart-color-purple-300};
+    --#{$chart}-color-purple-400: #{$pf-v5-chart-color-purple-400};
+    --#{$chart}-color-purple-500: #{$pf-v5-chart-color-purple-500};
+    --#{$chart}-color-red-100: #{$pf-v5-chart-color-red-100};
+    --#{$chart}-color-red-200: #{$pf-v5-chart-color-red-200};
+    --#{$chart}-color-red-300: #{$pf-v5-chart-color-red-300};
+    --#{$chart}-color-red-400: #{$pf-v5-chart-color-red-400};
+    --#{$chart}-color-red-500: #{$pf-v5-chart-color-red-500};
 
     // globals
-    --#{$pf-prefix}chart-global--BorderColor: var(--#{$pf-global}--BorderColor--100);
-    --#{$pf-prefix}chart-global--BorderColor--accent: var(--#{$pf-global}--BorderColor--400);
-    --#{$pf-prefix}chart-global--label--Fill: var(--#{$pf-global}--Color--100);
-    --#{$pf-prefix}chart-global--title--Fill: var(--#{$pf-global}--Color--100);
-    --#{$pf-prefix}chart-global--subtitle--Fill: var(--#{$pf-global}--Color--200);
-    --#{$pf-prefix}chart-global--tooltip--Fill: var(--#{$pf-global}--Color--100);
-    --#{$pf-prefix}chart-global--tooltip--bg--Fill: var(--#{$pf-global}--BackgroundColor--300);
-    --#{$pf-prefix}chart-global--tooltip--BorderWidth: 1;
-    --#{$pf-prefix}chart-global--tooltip--BorderColor: var(--#{$pf-global}--BorderColor--300);
+    --#{$chart}-global--BorderColor: var(--#{$pf-global}--BorderColor--100);
+    --#{$chart}-global--BorderColor--accent: var(--#{$pf-global}--BorderColor--400);
+    --#{$chart}-global--label--Fill: var(--#{$pf-global}--Color--100);
+    --#{$chart}-global--title--Fill: var(--#{$pf-global}--Color--100);
+    --#{$chart}-global--subtitle--Fill: var(--#{$pf-global}--Color--200);
+    --#{$chart}-global--tooltip--Fill: var(--#{$pf-global}--Color--100);
+    --#{$chart}-global--tooltip--bg--Fill: var(--#{$pf-global}--BackgroundColor--300);
+    --#{$chart}-global--tooltip--BorderWidth: 1;
+    --#{$chart}-global--tooltip--BorderColor: var(--#{$pf-global}--BorderColor--300);
 
     // axis
-    --#{$pf-prefix}chart-axis--axis--stroke--Color: var(--#{$pf-prefix}chart-global--BorderColor);
-    --#{$pf-prefix}chart-axis--grid--stroke--Color: var(--#{$pf-prefix}chart-global--BorderColor);
-    --#{$pf-prefix}chart-axis--tick--stroke--Color: var(--#{$pf-prefix}chart-global--BorderColor);
-    --#{$pf-prefix}chart-axis--axis--tick--stroke--Color: var(--#{$pf-prefix}chart-global--BorderColor);
-    --#{$pf-prefix}chart-axis--grid--Fill: var(--#{$pf-prefix}chart-global--BorderColor);
-    --#{$pf-prefix}chart-axis--tick-label--Fill: var(--#{$pf-prefix}chart-global--label--Fill);
+    --#{$chart}-axis--axis--stroke--Color: var(--#{$chart}-global--BorderColor);
+    --#{$chart}-axis--grid--stroke--Color: var(--#{$chart}-global--BorderColor);
+    --#{$chart}-axis--tick--stroke--Color: var(--#{$chart}-global--BorderColor);
+    --#{$chart}-axis--axis--tick--stroke--Color: var(--#{$chart}-global--BorderColor);
+    --#{$chart}-axis--grid--Fill: var(--#{$chart}-global--BorderColor);
+    --#{$chart}-axis--tick-label--Fill: var(--#{$chart}-global--label--Fill);
 
     // bullet
-    --#{$pf-prefix}chart-bullet--label--title--Fill: var(--#{$pf-prefix}chart-global--title--Fill);
-    --#{$pf-prefix}chart-bullet--label--grouptitle--Fill: var(--#{$pf-prefix}chart-bullet--label--title--Fill); // shares title styles
-    --#{$pf-prefix}chart-bullet--label--subtitle--Fill: var(--#{$pf-prefix}chart-global--subtitle--Fill);
-    --#{$pf-prefix}chart-bullet--negative-measure--ColorScale--100: var(--#{$pf-global}--palette--red-400);
-    --#{$pf-prefix}chart-bullet--negative-measure--ColorScale--200: var(--#{$pf-global}--palette--red-300);
-    --#{$pf-prefix}chart-bullet--negative-measure--ColorScale--300: var(--#{$pf-global}--palette--red-200);
-    --#{$pf-prefix}chart-bullet--negative-measure--ColorScale--400: var(--#{$pf-global}--palette--red-100);
-    --#{$pf-prefix}chart-bullet--negative-measure--ColorScale--500: var(--#{$pf-global}--palette--red-9999);
-    --#{$pf-prefix}chart-bullet--qualitative-range--ColorScale--100: var(--#{$pf-global}--palette--black-600);
-    --#{$pf-prefix}chart-bullet--qualitative-range--ColorScale--200: var(--#{$pf-global}--palette--black-500);
-    --#{$pf-prefix}chart-bullet--qualitative-range--ColorScale--300: var(--#{$pf-global}--palette--black-400);
-    --#{$pf-prefix}chart-bullet--qualitative-range--ColorScale--400: var(--#{$pf-global}--palette--black-300);
-    --#{$pf-prefix}chart-bullet--qualitative-range--ColorScale--500: var(--#{$pf-global}--palette--black-200);
+    --#{$chart}-bullet--label--title--Fill: var(--#{$chart}-global--title--Fill);
+    --#{$chart}-bullet--label--grouptitle--Fill: var(--#{$chart}-bullet--label--title--Fill); // shares title styles
+    --#{$chart}-bullet--label--subtitle--Fill: var(--#{$chart}-global--subtitle--Fill);
+    --#{$chart}-bullet--negative-measure--ColorScale--100: var(--#{$pf-global}--palette--red-400);
+    --#{$chart}-bullet--negative-measure--ColorScale--200: var(--#{$pf-global}--palette--red-300);
+    --#{$chart}-bullet--negative-measure--ColorScale--300: var(--#{$pf-global}--palette--red-200);
+    --#{$chart}-bullet--negative-measure--ColorScale--400: var(--#{$pf-global}--palette--red-100);
+    --#{$chart}-bullet--negative-measure--ColorScale--500: var(--#{$pf-global}--palette--red-9999);
+    --#{$chart}-bullet--qualitative-range--ColorScale--100: var(--#{$pf-global}--palette--black-600);
+    --#{$chart}-bullet--qualitative-range--ColorScale--200: var(--#{$pf-global}--palette--black-500);
+    --#{$chart}-bullet--qualitative-range--ColorScale--300: var(--#{$pf-global}--palette--black-400);
+    --#{$chart}-bullet--qualitative-range--ColorScale--400: var(--#{$pf-global}--palette--black-300);
+    --#{$chart}-bullet--qualitative-range--ColorScale--500: var(--#{$pf-global}--palette--black-200);
 
     // container
-    --#{$pf-prefix}chart-container--cursor--line--Fill: var(--#{$pf-prefix}chart-global--BorderColor--accent);
+    --#{$chart}-container--cursor--line--Fill: var(--#{$chart}-global--BorderColor--accent);
 
     // donut
-    --#{$pf-prefix}chart-donut--label--title--Fill: var(--#{$pf-prefix}chart-global--title--Fill);
-    --#{$pf-prefix}chart-donut--label--subtitle--Fill: var(--#{$pf-prefix}chart-global--subtitle--Fill);
+    --#{$chart}-donut--label--title--Fill: var(--#{$chart}-global--title--Fill);
+    --#{$chart}-donut--label--subtitle--Fill: var(--#{$chart}-global--subtitle--Fill);
 
     // lines
-    --#{$pf-prefix}chart-line--data--stroke--Color: var(--#{$pf-prefix}chart-global--BorderColor);
+    --#{$chart}-line--data--stroke--Color: var(--#{$chart}-global--BorderColor);
 
     // Tooltips
 
     // text color
-    --#{$pf-prefix}chart-tooltip--Fill: var(--#{$pf-prefix}chart-global--tooltip--Fill);
-    --#{$pf-prefix}chart-voronoi--labels--Fill: var(--#{$pf-prefix}chart-global--tooltip--Fill);
+    --#{$chart}-tooltip--Fill: var(--#{$chart}-global--tooltip--Fill);
+    --#{$chart}-voronoi--labels--Fill: var(--#{$chart}-global--tooltip--Fill);
     // background color
-    --#{$pf-prefix}chart-tooltip--flyoutStyle--Fill: var(--#{$pf-prefix}chart-global--tooltip--bg--Fill);
-    --#{$pf-prefix}chart-voronoi--flyout--stroke--Fill: var(--#{$pf-prefix}chart-global--tooltip--bg--Fill);
+    --#{$chart}-tooltip--flyoutStyle--Fill: var(--#{$chart}-global--tooltip--bg--Fill);
+    --#{$chart}-voronoi--flyout--stroke--Fill: var(--#{$chart}-global--tooltip--bg--Fill);
     // border
-    --#{$pf-prefix}chart-tooltip--flyoutStyle--stroke--Width: var(--#{$pf-prefix}chart-global--tooltip--BorderWidth);
-    --#{$pf-prefix}chart-tooltip--flyoutStyle--stroke--Color: var(--#{$pf-prefix}chart-global--tooltip--BorderColor);
-    --#{$pf-prefix}chart-voronoi--flyout--stroke--Width: var(--#{$pf-prefix}chart-global--tooltip--BorderWidth);
-    --#{$pf-prefix}chart-voronoi--flyout--stroke--Color: var(--#{$pf-prefix}chart-global--tooltip--BorderColor);
+    --#{$chart}-tooltip--flyoutStyle--stroke--Width: var(--#{$chart}-global--tooltip--BorderWidth);
+    --#{$chart}-tooltip--flyoutStyle--stroke--Color: var(--#{$chart}-global--tooltip--BorderColor);
+    --#{$chart}-voronoi--flyout--stroke--Width: var(--#{$chart}-global--tooltip--BorderWidth);
+    --#{$chart}-voronoi--flyout--stroke--Color: var(--#{$chart}-global--tooltip--BorderColor);
   }
   // stylelint-enable
 }
