--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -9,7 +9,7 @@
   --#{$card}--child--PaddingLeft: var(--#{$pf-global}--spacer--lg);
   --#{$card}--c-divider--child--PaddingTop: var(--#{$pf-global}--spacer--lg);
   --#{$card}__title--not--last-child--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$card}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading--sans-serif);
+  --#{$card}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading);
   --#{$card}__title-text--FontSize: var(--#{$pf-global}--FontSize--md);
   --#{$card}__title-text--FontWeight: var(--#{$pf-global}--FontWeight--normal);
   --#{$card}__title-text--LineHeight: var(--#{$pf-global}--LineHeight--md);
