--- a/src/patternfly/components/Content/content.scss
+++ b/src/patternfly/components/Content/content.scss
@@ -11,7 +11,7 @@
   --#{$content}--Color: var(--#{$pf-global}--Color--100);
 
   // Headings
-  --#{$content}--heading--FontFamily: var(--#{$pf-global}--FontFamily--heading--sans-serif);
+  --#{$content}--heading--FontFamily: var(--#{$pf-global}--FontFamily--heading);
 
   // h1
   --#{$content}--h1--MarginTop: var(--#{$pf-global}--spacer--lg);
