--- a/src/patternfly/components/ModalBox/modal-box.scss
+++ b/src/patternfly/components/ModalBox/modal-box.scss
@@ -35,7 +35,7 @@
 
   // Title
   --#{$modal-box}__title--LineHeight: var(--#{$pf-global}--LineHeight--sm);
-  --#{$modal-box}__title--FontFamily: var(--#{$pf-global}--FontFamily--heading--sans-serif);
+  --#{$modal-box}__title--FontFamily: var(--#{$pf-global}--FontFamily--heading);
   --#{$modal-box}__title--FontSize: var(--#{$pf-global}--FontSize--2xl);
 
   // Title icon
