--- a/src/patternfly/components/Popover/popover.scss
+++ b/src/patternfly/components/Popover/popover.scss
@@ -56,7 +56,7 @@
 
   // Title text
   --#{$popover}__title-text--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$popover}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading--sans-serif);
+  --#{$popover}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading);
   --#{$popover}__title-text--FontSize: var(--#{$pf-global}--FontSize--md);
 
   // Title icon
