--- a/src/patternfly/components/Wizard/wizard.scss
+++ b/src/patternfly/components/Wizard/wizard.scss
@@ -41,7 +41,7 @@
 
   // Title text
   --#{$wizard}__title-text--FontSize: var(--#{$pf-global}--FontSize--3xl);
-  --#{$wizard}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading--sans-serif);
+  --#{$wizard}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading);
   --#{$wizard}__title-text--FontWeight: var(--#{$pf-global}--FontWeight--normal);
   --#{$wizard}__title-text--LineHeight: var(--#{$pf-global}--LineHeight--sm);
 
