--- a/src/patternfly/base/_fonts.scss
+++ b/src/patternfly/base/_fonts.scss
@@ -1,151 +1,136 @@
-// Fonts
-// --------------------------------------------------
-// PatternFly uses RedHatText - https://github.com/RedHatOfficial/RedHatFont
-
-// stylelint-disable font-family-name-quotes
-
 @font-face {
-  font-family: "RedHatDisplay";
-  font-style: normal;
-  font-weight: 300;
-  src:
-    url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplay-Regular.woff2") format("woff2");
-  text-rendering: optimizelegibility;
-}
-
-@font-face {
-  font-family: "RedHatDisplay";
+  font-family: RedHatDisplay;
   font-style: normal;
   font-weight: 400;
   src:
     url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplay-Medium.woff2") format("woff2");
-  text-rendering: optimizelegibility;
+  font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatDisplay";
+  font-family: RedHatDisplay;
+  font-style: italic;
+  font-weight: 400;
+  src:
+    url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplay-MediumItalic.woff2") format("woff2");
+  font-display: fallback;
+}
+
+@font-face {
+  font-family: RedHatDisplay;
   font-style: normal;
   font-weight: 700;
   src:
     url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplay-Bold.woff2") format("woff2");
-  text-rendering: optimizelegibility;
+  font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatText";
+  font-family: RedHatDisplay;
+  font-style: normal;
+  font-weight: 700;
+  src:
+    url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplay-BoldItalic.woff2") format("woff2");
+  font-display: fallback;
+}
+
+@font-face {
+  font-family: RedHatText;
   font-style: normal;
   font-weight: 400;
   src:
     url("#{$pf-v5-global--font-path}/RedHatText/RedHatText-Regular.woff2") format("woff2");
-  text-rendering: optimizelegibility;
+  font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatText";
+  font-family: RedHatText;
+  font-style: italic;
+  font-weight: 400;
+  src:
+    url("#{$pf-v5-global--font-path}/RedHatText/RedHatText-Italic.woff2") format("woff2");
+  font-display: fallback;
+}
+
+@font-face {
+  font-family: RedHatText;
   font-style: normal;
   font-weight: 700;
   src:
     url("#{$pf-v5-global--font-path}/RedHatText/RedHatText-Medium.woff2") format("woff2");
-  text-rendering: optimizelegibility;
-}
-
-// RedHatFont-updated
-@font-face {
-  font-family: "RedHatDisplayUpdated";
-  font-style: normal;
-  font-weight: 300;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatDisplay/RedHatDisplay-updated-Regular.woff2") format("woff2");
-  text-rendering: optimizelegibility;
+  font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatDisplayUpdated";
-  font-style: normal;
-  font-weight: 400;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatDisplay/RedHatDisplay-updated-Medium.woff2") format("woff2");
-  text-rendering: optimizelegibility;
-}
-
-@font-face {
-  font-family: "RedHatDisplayUpdated";
-  font-style: normal;
+  font-family: RedHatText;
+  font-style: italic;
   font-weight: 700;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatDisplay/RedHatDisplay-updated-Bold.woff2") format("woff2");
-  text-rendering: optimizelegibility;
+  src:
+    url("#{$pf-v5-global--font-path}/RedHatText/RedHatText-MediumItalic.woff2") format("woff2");
+  font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatTextUpdated";
+  font-family: RedHatMono;
   font-style: normal;
   font-weight: 400;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatText/RedHatText-updated-Regular.woff2") format("woff2");
-  text-rendering: optimizelegibility;
+  src: url("#{$pf-v5-global--font-path}/RedHatMono/RedHatMono-Regular.woff2") format("woff2");
+  font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatTextUpdated";
-  font-style: normal;
-  font-weight: 700;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatText/RedHatText-updated-Medium.woff2") format("woff2");
-  text-rendering: optimizelegibility;
-}
-
-// RedHatMono
-@font-face {
-  font-family: "RedHatMono";
-  font-style: normal;
+  font-family: RedHatMono;
+  font-style: italic;
   font-weight: 400;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatMono/RedHatMono-updated-Regular.woff2") format("woff2");
+  src: url("#{$pf-v5-global--font-path}/RedHatMono/RedHatMono-Italic.woff2") format("woff2");
   font-display: fallback;
 }
 
 // Variable fonts
 @font-face {
-  font-family: "RedHatDisplayVF";
+  font-family: RedHatDisplayVF;
   font-style: normal;
-  font-weight: 300 900;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/modified/RedHatDisplayVFModified-updated.woff2") format("woff2-variations");
+  font-weight: 400 700;
+  src: url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplayVF.woff2") format("woff2-variations");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatDisplayVF";
+  font-family: RedHatDisplayVF;
   font-style: italic;
-  font-weight: 300 900;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/modified/RedHatDisplayVF-updated-ItalicModified.woff2") format("woff2-variations");
+  font-weight: 400 700;
+  src: url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplayVF-Italic.woff2") format("woff2-variations");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatTextVF";
+  font-family: RedHatTextVF;
   font-style: normal;
   font-weight: 400 500;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/modified/RedHatTextVFModified-updated.woff2") format("woff2-variations");
+  src: url("#{$pf-v5-global--font-path}/RedHatText/RedHatTextVF.woff2") format("woff2-variations");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatTextVF";
+  font-family: RedHatTextVF;
   font-style: italic;
   font-weight: 400 500;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/modified/RedHatTextVF-updated-ItalicModified.woff2") format("woff2-variations");
+  src: url("#{$pf-v5-global--font-path}/RedHatText/RedHatTextVF-Italic.woff2") format("woff2-variations");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatMonoVF";
+  font-family: RedHatMonoVF;
   font-style: normal;
-  font-weight: 300 700;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatMono/RedHatMonoVF-updated.woff2") format("woff2-variations");
+  font-weight: 400;
+  src: url("#{$pf-v5-global--font-path}/RedHatMono/RedHatMonoVF.woff2") format("woff2-variations");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "RedHatMonoVF";
+  font-family: RedHatMonoVF;
   font-style: italic;
-  font-weight: 300 700;
-  src: url("#{$pf-v5-global--font-path}/RedHatFont-updated/RedHatMono/RedHatMonoVF-updated-Italic.woff2") format("woff2-variations");
+  font-weight: 400;
+  src: url("#{$pf-v5-global--font-path}/RedHatMono/RedHatMonoVF-Italic.woff2") format("woff2-variations");
   font-display: fallback;
 }
-
-// stylelint-enable
