chore(SearchInput): removed component

--- a/src/patternfly/components/Toolbar/toolbar-item-context-selector.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-item-context-selector.hbs
@@ -8,7 +8,7 @@
   {{/context-selector-toggle}}
   {{#> context-selector-menu}}
     {{#> context-selector-menu-search}}
-      {{> search-input}}
+      {{> text-input-group--search-input text-input-group-text-input--aria-label="Filter menu items" text-input-group-text-input--placeholder="Search"}}
     {{/context-selector-menu-search}}
     {{#> context-selector-menu-menu}}
       <li>
