--- a/src/patternfly/components/Select/__select-checkbox-groups-checked.hbs
+++ b/src/patternfly/components/Select/__select-checkbox-groups-checked.hbs
@@ -5,7 +5,7 @@
   {{/if}}>
   {{#if select--IsFilterable}}
     {{#> select-menu-search}}
-      {{#> search-input}}{{/search-input}}
+      {{> text-input-group--search-input text-input-group-text-input--aria-label="Filter menu items" text-input-group-text-input--placeholder="Search"}}
     {{/select-menu-search}}
     {{> divider}}
   {{/if}}
