--- a/src/patternfly/components/Select/__select-menu-favorites.hbs
+++ b/src/patternfly/components/Select/__select-menu-favorites.hbs
@@ -5,7 +5,7 @@
     {{{select--attribute}}}
   {{/if}}>
   {{#> select-menu-search}}
-    {{#> search-input}}{{/search-input}}
+    {{> text-input-group--search-input text-input-group-text-input--aria-label="Filter menu items" text-input-group-text-input--placeholder="Search"}}
   {{/select-menu-search}}
   {{> divider}}
   {{#> select-menu-group}}
