--- a/src/patternfly/demos/Masthead/masthead-template-context-selector.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-context-selector.hbs
@@ -7,7 +7,7 @@
   {{/context-selector-toggle}}
   {{#> context-selector-menu}}
     {{#> context-selector-menu-search}}
-      {{> search-input}}
+      {{> text-input-group--search-input text-input-group-text-input--aria-label="Filter menu items" text-input-group-text-input--placeholder="Search"}}
     {{/context-selector-menu-search}}
     {{> __context-selector-menu-menu}}
   {{/context-selector-menu}}
