chore(SearchInput): removed remaining searchInput usage

--- a/src/patternfly/components/Page/page-sidebar.hbs
+++ b/src/patternfly/components/Page/page-sidebar.hbs
@@ -14,7 +14,7 @@
         {{/context-selector-toggle}}
         {{#> context-selector-menu}}
           {{#> context-selector-menu-search}}
-            {{#> search-input}}{{/search-input}}
+            {{> menu--search-input}}
           {{/context-selector-menu-search}}
           {{> __context-selector-menu-menu}}
         {{/context-selector-menu}}
