--- a/src/patternfly/components/TextInputGroup/text-input-group--search-input.hbs
+++ b/src/patternfly/components/TextInputGroup/text-input-group--search-input.hbs
@@ -1,8 +1,8 @@
-{{#> text-input-group text-input-group-text-input--type="search"}}
+{{#> text-input-group}}
   {{#> text-input-group-main text-input-group-main--modifier="pf-m-icon"}}
     {{#> text-input-group-text}}
       {{> text-input-group-icon}}
-      {{> text-input-group-text-input}}
+      {{> text-input-group-text-input text-input-group-text-input--aria-label="Search input"}}
     {{/text-input-group-text}}
   {{/text-input-group-main}}
   {{#if text-input-group--value}}
