--- a/src/patternfly/demos/Page/page-template-masthead-drilldown.hbs
+++ b/src/patternfly/demos/Page/page-template-masthead-drilldown.hbs
@@ -74,7 +74,7 @@
             {{/menu-header}}
             {{#> menu-search}}
               {{#> menu-search-input}}
-                {{#> search-input}}{{/search-input}}
+                {{> menu--search-input}}
               {{/menu-search-input}}
             {{/menu-search}}
             {{> divider}}
