--- a/src/patternfly/sass-utilities/functions.scss
+++ b/src/patternfly/sass-utilities/functions.scss
@@ -83,11 +83,15 @@
 
 // Build spacer map
 // Based on $pf-global--spacer-map
-@function build-spacer-map($map-items...) {
+@function build-spacer-map($base: false, $map-items...) {
   $map: ();
 
+  @if $base {
+    $map: map-merge($map, ("base": null));
+  }
+  
   @if length($map-items) == 0 {
-    $map: ("none": 0);
+    $map: map-merge($map, ("none": 0));
     $map: map-merge($map, $pf-global--spacer-map);
     $map: map-remove($map, "auto", "0");
   }
@@ -95,8 +99,6 @@
   @each $spacer in $map-items {
     @if $spacer == "none" {
       $map: map-merge($map, ($spacer: 0));
-    } @else if $spacer == "base" {
-      $map: map-merge($map, ($spacer: null));
     } @else if not map-has-key($pf-global--spacer-map, $spacer) {
       $map: map-merge($map, ("invalid spacer #{$spacer}": null));
     } @else {
