--- a/src/patternfly/components/Card/card-title.hbs
+++ b/src/patternfly/components/Card/card-title.hbs
@@ -1,4 +1,4 @@
-<div
+<div class="{{pfv}}card__title{{#if card-title--modifier}} {{card-title--modifier}}{{/if}}"
   {{#if card-title--id}}
     id="{{card-title--id}}"
   {{/if}}
