feat(version): resolved help icon issue

--- a/src/patternfly/assets/pficon/pficon.scss
+++ b/src/patternfly/assets/pficon/pficon.scss
@@ -248,28 +248,28 @@
 		$char: '\E964';
 	}
 	@if $filename == pficon-dragdrop {
-		$char: '\E965';
+		$char: '\E97C';
 	}
 	@if $filename == pficon-history {
-		$char: '\E966';
+		$char: '\E97D';
 	}
 	@if $filename == pficon-network-range {
-		$char: '\E967';
+		$char: '\E97E';
 	}
 	@if $filename == pficon-satellite {
-		$char: '\E968';
+		$char: '\E97F';
 	}
 	@if $filename == pficon-sort-common-asc {
-		$char: '\E94E';
+		$char: '\E980';
 	}
 	@if $filename == pficon-sort-common-desc {
-		$char: '\E94F';
+		$char: '\E981';
 	}
 	@if $filename == pficon-template {
-		$char: '\E94C';
+		$char: '\E982';
 	}
 	@if $filename == pficon-vcenter {
-		$char: '\E969';
+		$char: '\E983';
 	}
 	@if $filename == plugged {
 		$char: '\E96A';
