--- a/src/patternfly/components/NotificationBadge/notification-badge.hbs
+++ b/src/patternfly/components/NotificationBadge/notification-badge.hbs
@@ -16,11 +16,11 @@
     {{/if}}>
     <i class="
       {{~#if notification-badge--IsTask}}
-        pf-v5-c-icon-task
+        pf-v5-icon-task
       {{~else if notification-badge--IsAttention}}
-        pf-v5-c-icon-attention-bell
+        pf-v5-icon-attention-bell
       {{~else}}
-        pf-v5-c-icon-bell
+        pf-v5-icon-bell
       {{~/if}}"
       aria-hidden="true"></i>
     {{#if notification-badge--count}}
