--- a/src/patternfly/demos/Card/templates/card-template-expandable-status.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-expandable-status.hbs
@@ -25,7 +25,7 @@
           }}
         {{> divider divider--modifier="pf-m-vertical-on-md pf-m-inset-3xl"}}
         {{> card-template-expandable-status-card
-            card-template-expandable-status-card--label-icon='<i class="pf-v5-c-icon pf-v5-c-icon-automation" aria-hidden="true"></i>'
+            card-template-expandable-status-card--label-icon='<i class="pf-v5-icon pf-v5-icon-automation" aria-hidden="true"></i>'
             card-template-expandable-status-card--label-text="Availability"
             card-template-expandable-status-card--header-link--text="166 systems"
             card-template-expandable-status-card--body--text="Fine tune your Oracle DB configuration to improve database performance and avoid process failure"
