--- a/src/patternfly/sass-utilities/component-namespaces.scss
+++ b/src/patternfly/sass-utilities/component-namespaces.scss
@@ -123,7 +123,7 @@ $helper-text: #{$pf-prefix} + 'c-helper-text';
 $hint: #{$pf-prefix} + 'c-hint';
 
 // Icon
-$icon: #{$pf-prefix} + 'icon';
+$icon: #{$pf-prefix} + 'c-icon';
 
 // Inline Edit
 $inline-edit: #{$pf-prefix} + 'c-inline-edit';
