--- a/src/patternfly/demos/Page/page-template-masthead-drilldown.hbs
+++ b/src/patternfly/demos/Page/page-template-masthead-drilldown.hbs
@@ -36,9 +36,9 @@
           {{/menu}}
         {{/menu-list-item}}
 
-        {{#> menu-list-item menu--IsDrilledInReset="true" menu-list-item--IsExpandable="true" menu-list-item--text="Help" menu-list-item--IsDrillDown="true" menu-list-item--icon="pf-v5-c-icon pf-v5-c-icon-help"}}
+        {{#> menu-list-item menu--IsDrilledInReset="true" menu-list-item--IsExpandable="true" menu-list-item--text="Help" menu-list-item--IsDrillDown="true" menu-list-item--icon="pf-v5-icon pf-v5-icon-help"}}
           {{#> menu menu--IsSubmenu="true" menu--modifier="" menu--id=(concat menu--id  '-list-2') menu--attribute=''}}
-            {{> menu-list-item newcontext menu-list-item--IsDrillUp="true" menu-list-item--text="Help" menu-list-item--icon="pf-v5-c-icon pf-v5-c-icon-help"}}
+            {{> menu-list-item newcontext menu-list-item--IsDrillUp="true" menu-list-item--text="Help" menu-list-item--icon="pf-v5-icon pf-v5-icon-help"}}
             {{> divider divider--type="li"}}
             {{> menu-list-item newcontext menu-list-item--text="Support options" menu-item--IsLink="true"}}
             {{> menu-list-item newcontext menu-list-item--text="Open support case" menu-item--IsLink="true"}}
