--- a/src/patternfly/assets/pficon/pficon.scss
+++ b/src/patternfly/assets/pficon/pficon.scss
@@ -1,10 +1,10 @@
 @font-face {
-	font-family: 'pf-icon';
+	font-family: 'pficon';
 	src: url('#{$pf-v5-global--fonticon-path}/pficon.woff2') format('woff2');
 }
 
 @mixin pf-v5-icon-styles {
-	font-family: 'pf-icon';
+	font-family: 'pficon';
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
 	font-style: normal;
