--- a/src/patternfly/components/NotificationDrawer/notification-drawer-list-item-header-title.hbs
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer-list-item-header-title.hbs
@@ -2,7 +2,7 @@
   {{#if notification-drawer-list-item-header-title--attribute}}
     {{{notification-drawer-list-item-header-title--attribute}}}
   {{/if}}>
-  <span class="pf-screen-reader">
+  <span class="{{pfv 'unset-prefix'}}screen-reader">
     {{#if notification-drawer-list-item--IsInfo}}
       Info notification:
     {{else if notification-drawer-list-item--IsWarning}}
